# uprchat

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: db_config.py  main.py  models.py
app/routes/: domains.py  models.py  sources.py  urls.py
docs/: Estructura de archivos del proyecto.md  Estructura de un recolector.md  Harvester-API.yml  idea.md
docs/ontology/: sceiba.md
